#9 fixes width of cards on small devices

--- a/src/style/Meteo.css
+++ b/src/style/Meteo.css
@@ -84,7 +84,7 @@
     .ui.cards {
         display: flex;
         justify-content: space-around;
-        width: 80%;
+        width: 100%;
         flex-direction: column;
         align-items: center;
         margin: auto;
@@ -95,7 +95,7 @@
         background-clip: border-box;
         border: 1px solid rgba(0, 0, 0, .125);
         border-radius: .25rem;
-        width: 80%;
+        width: 100%;
         margin: 1%;
     }
 
@@ -110,7 +110,7 @@
     .ui.cards {
         display: flex;
         justify-content: space-around;
-        width: 80%;
+        width: 100%;
         flex-direction: column;
         align-items: center;
         margin: auto;
@@ -121,7 +121,7 @@
         background-clip: border-box;
         border: 1px solid rgba(0, 0, 0, .125);
         border-radius: .25rem;
-        width: 80%;
+        width: 100%;
         margin: 1%;
     }
 
